--- a/src/app/pages/pages-login/pages-login.component.html
+++ b/src/app/pages/pages-login/pages-login.component.html
@@ -51,7 +51,9 @@
 
                            <div class="col-12 pr d-flex flex-column align-items-center justify-content-center ">
                               <div class="login-btn d-flex align-items-center justify-content-center">
-                                 <button id="loginbtn" class="btn rounded d-flex justify-content-center align-items-center btn-primary py-2 w-100" type="submit">Login</button>
+                                 <button id="loginbtn"
+                                    class="btn rounded d-flex justify-content-center align-items-center btn-primary py-2 w-100"
+                                    type="submit">Login</button>
                                  <div *ngIf="loading" class=" loading"></div>
                               </div>
                            </div>
@@ -73,7 +75,5 @@
       </section>
    </div>
 </main>
-
-
 
 <!-- <app-loader *ngIf="isLoading" ></app-loader> -->
