--- a/src/app/pages/pages-register/pages-register.component.html
+++ b/src/app/pages/pages-register/pages-register.component.html
@@ -1,60 +1,79 @@
-<main>
-    <div class="container">
-       <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-2">
-          <div class="container">
-             <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
-                   <div class="d-flex justify-content-center py-3"> <a routerLink="/" class="logo d-flex align-items-center w-auto"> <img style="margin-bottom: 6px;" src="../../../favicon.ico" alt=""> <span class="d-none d-lg-block">AHNMI</span> </a></div>
-                   <div class="card mb-3">
-                      <div class="card-body">
-                         <div class="pt-2 pb-2">
-                            <h5 class="card-title text-center pb-0 fs-4">NEW MEMBER SIGN UP</h5>
-                            <!-- <p class="text-center small">Enter your personal details to create account</p> -->
-                         </div>
-                         <form class="row g-3 needs-validation" [formGroup]="registerForm" (ngSubmit)="onRegister(registerForm)">
-                            <div class="col-12">
-                               <label for="yourName" class="form-label">Your Name</label> <input type="text" formControlName="name"  class="form-control" id="yourName" required>
-                               <div class="invalid-feedback">Please, enter your name!</div>
-                            </div>
-                            <div class="col-12">
-                               <label for="yourEmail" class="form-label">Your Email</label> <input type="email" formControlName="email" class="form-control" id="yourEmail" required>
-                               <div class="invalid-feedback">Please enter a valid Email adddress!</div>
-                            </div>
-                            <!-- <div class="col-12">
+<main  >
+   <div class="container">
+      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-2">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div *ngIf="!isGmailVerify" class="col-lg-4 col-md-4 d-flex flex-column align-items-center justify-content-center">
+                  <div class="d-flex justify-content-center py-3"> <a routerLink="/"
+                        class="logo d-flex align-items-center w-auto"> <img style="margin-bottom: 6px;"
+                           src="../../../favicon.ico" alt=""> <span class="d-none d-lg-block">AHNMI</span> </a></div>
+                  <div class="card mb-3">
+                     <div class="card-body">
+                        <div class="pt-2 pb-2">
+                           <h5 class="card-title text-center pb-0 fs-4">NEW MEMBER SIGN UP</h5>
+                           <!-- <p class="text-center small">Enter your personal details to create account</p> -->
+                        </div>
+                        <form class="row g-3 needs-validation" [formGroup]="registerForm"
+                           (ngSubmit)="onRegister(registerForm)">
+                           <div class="col-12">
+                              <label for="yourName" class="form-label">Your Name</label> <input type="text"
+                                 formControlName="name" class="form-control" id="yourName" required>
+                              <div class="invalid-feedback">Please, enter your name!</div>
+                           </div>
+                           <div class="col-12">
+                              <label for="yourEmail" class="form-label">Your Email</label> <input type="email"
+                                 formControlName="email" class="form-control" id="yourEmail" required>
+                              <div class="invalid-feedback">Please enter a valid Email adddress!</div>
+                           </div>
+                           <!-- <div class="col-12">
                                <label for="yourUsername" class="form-label">Username</label>
                                <div class="input-group has-validation">
                                   <span class="input-group-text" id="inputGroupPrepend">@</span> <input type="text" name="username" class="form-control" id="yourUsername" required>
                                   <div class="invalid-feedback">Please choose a username.</div>
                                </div>
                             </div> -->
-                            <div class="col-12">
-                               <label for="yourPassword" class="form-label">Password</label> <input type="password" formControlName="password" class="form-control" id="yourPassword" required>
-                               <div class="invalid-feedback">Please enter your password!</div>
-                            </div>
-                            <div class="col-12">
-                               <label for="yourPassword" class="form-label">Confirm Password</label> <input type="password" formControlName="c_password" class="form-control" id="yourPassword" required>
-                               <div class="invalid-feedback">Please enter your password!</div>
-                            </div>
-                            <div class="col-12">
-                               <div class="form-check">
-                                  <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required> <label class="form-check-label" for="acceptTerms">I agree and accept the <a href="#">terms and conditions</a></label>
-                                  <div class="invalid-feedback">You must agree before submitting.</div>
-                               </div>
-                            </div>
-                            <div class="col-12"> <button class="btn btn-primary w-100" type="submit">Create Account</button></div>
-                            <div class="col-12 d-flex justify-content-center ">
-                               <p class="small mb-0">Already have an account? <a routerLink="/">Log in</a></p>
-                            </div>
-                         </form>
-                      </div>
-                   </div>
-                   <!-- <div class="credits"> Loved by <a href="https://freeetemplates.com/">FreeeTemplates</a></div> -->
-                </div>
-             </div>
-          </div>
-          
-       </section>
-    </div>
- </main>
+                           <div class="col-12">
+                              <label for="yourPassword" class="form-label">Password</label> <input type="password"
+                                 formControlName="password" class="form-control" id="yourPassword" required>
+                              <div class="invalid-feedback">Please enter your password!</div>
+                           </div>
+                           <div class="col-12">
+                              <label for="yourPassword" class="form-label">Confirm Password</label> <input
+                                 type="password" formControlName="c_password" class="form-control" id="yourPassword"
+                                 required>
+                              <div class="invalid-feedback">Please enter your confirm password!</div>
+                           </div>
+                           <div class="col-12">
+                              <div class="form-check">
+                                 <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms"
+                                    required> <label class="form-check-label" for="acceptTerms">I agree and accept the
+                                    <a href="#">terms and conditions</a></label>
+                                 <div class="invalid-feedback">You must agree before submitting.</div>
+                              </div>
+                           </div>
+                           <div class="col-12"> <button class="btn btn-primary w-100" type="submit">Create
+                                 Account</button></div>
+                           <div class="col-12 d-flex justify-content-center ">
+                              <p class="small mb-0">Already have an account? <a routerLink="/">Log in</a></p>
+                           </div>
+                        </form>
+                     </div>
+                  </div>
+                  <!-- <div class="credits"> Loved by <a href="https://freeetemplates.com/">FreeeTemplates</a></div> -->
+               </div>
+               <div *ngIf="isGmailVerify" class="verfiy-container d-flex flex-column align-items-center justify-content-center">
+                  <div class="card">
+                     <div class="card-body">
+                        <button class="btn btn-dark">Verfiy Email</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
 
- <app-loader *ngIf="isLoading" ></app-loader>
+      </section>
+   </div>
+
+</main>
+
+<app-loader *ngIf="isLoading"></app-loader>
