--- a/src/app/pages/stripe/stripe.component.html
+++ b/src/app/pages/stripe/stripe.component.html
@@ -1,19 +1,18 @@
-<main class="main" id="main">
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <form [formGroup]="stripeForm" (ngSubmit)="checkout()">
-                    <div class="form-group">
+    <!-- <div class="container p-5">
+        <div class="row"> -->
+            <div class="col-4 m-auto ">
+                <form class="px-3" [formGroup]="stripeForm" (ngSubmit)="checkout()">
+                    <!-- <div class="form-group">
                         <label for="name">Full Name<span style="font-size: 14px;">(If not provided account name will be
                                 taken)</span></label>
                         <input type="text" id="name" formControlName="name" class="form-control" placeholder="Full name*">
-                    </div>
+                    </div> -->
                     <div class="form-group">
                         <label>Enter your card details</label>
-                        <div id="card-element" class="card-style"></div>
+                        <div id="card-element" class="card-style py-4"></div>
                     </div>
-                    <button class="pay-btn" [disabled]="stripeForm.invalid" type="submit">
-                        Buy
+                    <button class="pay-btn btn btn-success" [disabled]="stripeForm.invalid" type="submit">
+                        Get Membership
                     </button>
                 </form>
 
@@ -21,6 +20,6 @@
             
             
             
-        </div>
-    </div>
-</main>
+        <!-- </div>
+    </div> -->
+
